[project]
name = "tea-knowledge-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.30",
    "pillow>=11.3.0",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
]
